added song list UI

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyMusic | 2025-v1 </title>
     <link rel="stylesheet" href="./src/output.css">
-</head>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=favorite" />
+
 
 <body>
     <!-- Circle Div -->
@@ -87,55 +89,83 @@
             <!-- Used to display folders container end-->
             <!-- Used to display the songs from folder -->
             <section id="display-songs"
-                class="w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 p-3 grid grid-cols-1 place-items-center gap-3 border border-amber-300 md:grid-cols-5 lg:grid-cols-6">
-                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl ">
+                class="relative w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 px-3 pt-10 pb-4 grid-cols-1 place-items-center gap-3 border border-amber-300 md:grid-cols-5 lg:grid-cols-6">
+                <div class="absolute top-2.5 left-3">
+                    <img src="src/images/left-arrow.png" alt="prev-btn">
+                </div>
+                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
                     <div class="aspect-square w-[20px] bg-pink-400"></div>
                     <div>
-                        <p class="text-white text-sm p-2">Boku no Hero Academia  - Merry-Go-Round</p>
+                        <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
+                    </div>
+                    <div>
+                        <span class="material-symbols-outlined">favorite</span>
                     </div>
                 </div>
-                <div class="border bg-gray-600 px-3 py-2 flex justify-around items-center gap-3 rounded-xl w-full">
+                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
                     <div class="aspect-square w-[20px] bg-pink-400"></div>
                     <div>
-                        <p class="text-white text-sm py-2">Boku no Hero Academia  - Merry-Go-Round</p>
+                        <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
+                    </div>
+                    <div>
+                        <span class="material-symbols-outlined">favorite</span>
                     </div>
                 </div>
-                <div class="border bg-gray-600 px-3 py-2 flex justify-between items-center gap-3 rounded-xl w-full">
+                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
                     <div class="aspect-square w-[20px] bg-pink-400"></div>
                     <div>
-                        <p class="text-white text-sm py-2">Die for you ft.Grabbitz</p>
+                        <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
+                    </div>
+                    <div>
+                        <span class="material-symbols-outlined">favorite</span>
                     </div>
                 </div>
-                <div class="border bg-gray-600 px-3 py-2 flex justify-around items-center gap-3 rounded-xl w-full">
+                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
                     <div class="aspect-square w-[20px] bg-pink-400"></div>
                     <div>
-                        <p class="text-white text-sm py-2">Die for you ft.Grabbitz</p>
+                        <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
+                    </div>
+                    <div>
+                        <span class="material-symbols-outlined">favorite</span>
                     </div>
                 </div>
-                <div class="border bg-gray-600 px-3 py-2 flex justify-around items-center gap-3 rounded-xl w-full">
-                    <div class="aspect-square w-[20px] bg-pink-400"></div>
-                    <div >
-                        <p class="text-white text-sm py-2">Die for you ft.Grabbitz</p>
-                    </div>
-                </div>
-                <div class="border bg-gray-600 px-3 py-2 flex justify-around items-center gap-3 rounded-xl w-full">
+                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
                     <div class="aspect-square w-[20px] bg-pink-400"></div>
                     <div>
-                        <p class="text-white text-sm py-2">Die for you ft.Grabbitz</p>
+                        <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
+                    </div>
+                    <div>
+                        <span class="material-symbols-outlined">favorite</span>
                     </div>
                 </div>
-                <div class="border bg-gray-600 px-3 py-2 flex justify-around items-center gap-3 rounded-xl w-full">
+                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
                     <div class="aspect-square w-[20px] bg-pink-400"></div>
                     <div>
-                        <p class="text-white text-sm py-2">Die for you ft.Grabbitz</p>
+                        <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
+                    </div>
+                    <div>
+                        <span class="material-symbols-outlined">favorite</span>
                     </div>
                 </div>
-                <div class="border bg-gray-600 px-3 py-2 flex justify-around items-center gap-3 rounded-xl w-full">
+                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
                     <div class="aspect-square w-[20px] bg-pink-400"></div>
                     <div>
-                        <p class="text-white text-sm py-2">Die for you ft.Grabbitz</p>
+                        <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
+                    </div>
+                    <div>
+                        <span class="material-symbols-outlined">favorite</span>
                     </div>
                 </div>
+                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
+                    <div class="aspect-square w-[20px] bg-pink-400"></div>
+                    <div>
+                        <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
+                    </div>
+                    <div>
+                        <span class="material-symbols-outlined">favorite</span>
+                    </div>
+                </div>
+
             </section>
             <!-- Used to display the songs from folder container end-->
             <!-- Song, play, pause section -->
