some changes in song list Ui

--- a/index.html
+++ b/index.html
@@ -89,12 +89,25 @@
             <!-- Used to display folders container end-->
             <!-- Used to display the songs from folder -->
             <section id="display-songs"
-                class="relative w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 px-3 pt-10 pb-4 grid-cols-1 place-items-center gap-3 border border-amber-300 md:grid-cols-5 lg:grid-cols-6">
-                <div class="absolute top-2.5 left-3">
+                class="relative w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 p-3 grid grid-cols-1 place-items-center gap-3 border border-amber-300 md:grid-cols-3 lg:grid-cols-5">
+                <!-- <div class="absolute top-2.5 left-3">
                     <img src="src/images/left-arrow.png" alt="prev-btn">
-                </div>
+                </div> -->
                 <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
-                    <div class="aspect-square w-[20px] bg-pink-400"></div>
+                    <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                        <img src="src/images/music-player.png" alt="music-iocn">
+                    </div>
+                    <div>
+                        <p class="text-white text-sm p-1 md:text-md border-2">Boku no Hero Academia - Merry-Go-Round</p>
+                    </div>
+                    <div>
+                        <span class="material-symbols-outlined">favorite</span>
+                    </div>
+                </div>
+                <div class="border bg-gray-600 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
+                    <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                        <img src="src/images/music-player.png" alt="music-iocn">
+                    </div>
                     <div>
                         <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
                     </div>
@@ -102,8 +115,10 @@
                         <span class="material-symbols-outlined">favorite</span>
                     </div>
                 </div>
-                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
-                    <div class="aspect-square w-[20px] bg-pink-400"></div>
+                <div class="border bg-gray-600 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
+                    <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                        <img src="src/images/music-player.png" alt="music-iocn">
+                    </div>
                     <div>
                         <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
                     </div>
@@ -111,8 +126,10 @@
                         <span class="material-symbols-outlined">favorite</span>
                     </div>
                 </div>
-                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
-                    <div class="aspect-square w-[20px] bg-pink-400"></div>
+                <div class="border bg-gray-600 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
+                    <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                        <img src="src/images/music-player.png" alt="music-iocn">
+                    </div>
                     <div>
                         <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
                     </div>
@@ -120,44 +137,10 @@
                         <span class="material-symbols-outlined">favorite</span>
                     </div>
                 </div>
-                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
-                    <div class="aspect-square w-[20px] bg-pink-400"></div>
-                    <div>
-                        <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
+                <div class="border bg-gray-600 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
+                    <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                        <img src="src/images/music-player.png" alt="music-iocn">
                     </div>
-                    <div>
-                        <span class="material-symbols-outlined">favorite</span>
-                    </div>
-                </div>
-                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
-                    <div class="aspect-square w-[20px] bg-pink-400"></div>
-                    <div>
-                        <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
-                    </div>
-                    <div>
-                        <span class="material-symbols-outlined">favorite</span>
-                    </div>
-                </div>
-                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
-                    <div class="aspect-square w-[20px] bg-pink-400"></div>
-                    <div>
-                        <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
-                    </div>
-                    <div>
-                        <span class="material-symbols-outlined">favorite</span>
-                    </div>
-                </div>
-                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
-                    <div class="aspect-square w-[20px] bg-pink-400"></div>
-                    <div>
-                        <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
-                    </div>
-                    <div>
-                        <span class="material-symbols-outlined">favorite</span>
-                    </div>
-                </div>
-                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
-                    <div class="aspect-square w-[20px] bg-pink-400"></div>
                     <div>
                         <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
                     </div>
@@ -171,21 +154,27 @@
             <!-- Song, play, pause section -->
             <article id="music-player"
                 class="bg-[#1B3C53] w-[90%] mx-auto my-2 p-3 rounded-3xl flex justify-between items-center gap-1.5">
-                <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] bg-black">
-                    <div></div>
+                <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px]">
+                    <img src="src/images/active-song-icon.png" alt="active-music-icon">
                 </div>
                 <!-- Progress bar and music details holder -->
                 <div class="w-full p-1">
                     <!-- play, pause, next button div holder -->
                     <div class="flex items-center gap-2 justify-center p-2">
                         <!-- Prev btn -->
-                        <div class="aspect-square w-[20px] md:w-[40px] lg:w-[50px] bg-black"></div>
+                        <div class="aspect-square w-[20px] md:w-[40px] lg:w-[50px]">
+                            <img src="src/images/prev-btn.png" alt="prev-btn-icon">
+                        </div>
                         <!-- prev btn end -->
                         <!-- play/pause btn -->
-                        <div class="aspect-square w-[20px] md:w-[40px] lg:w-[50px] bg-black"></div>
+                        <div class="aspect-square w-[20px] md:w-[40px] lg:w-[50px]">
+                            <img src="src/images/play-btn.png" alt="play-btn-icon">
+                        </div>
                         <!-- play,pasue btn end -->
                         <!-- next btn -->
-                        <div class="aspect-square w-[20px] md:w-[40px] lg:w-[50px] bg-black"></div>
+                        <div class="aspect-square w-[20px] md:w-[40px] lg:w-[50px]">
+                            <img src="src/images/next-btn.png" alt="next-btn-icon">
+                        </div>
                         <!-- next btn end -->
                     </div>
                     <!-- play, pause, next button div holder end -->
@@ -203,7 +192,7 @@
                     <!-- song details and controls div holder -->
                     <div class="flex justify-between items-center mt-2">
                         <!-- Music name -->
-                        <div class="">
+                        <div>
                             <span class="text-[12px] md:text-lg lg:text-xl text-white">Die for you ft.Grabbitz</span>
                         </div>
                         <!-- Music name end -->
