--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=favorite" />
 
 
-<body>
+<bodyS>
     <!-- Circle Div -->
     <!-- <div id="circle-div" class="border-2 border-amber-700 absolute top-0 left-0 z-[-1]"> -->
     <!-- Outer Cricle Div -->
@@ -21,7 +21,7 @@
         <header>
             <!-- Logo & Heading container-->
             <section id="logo-div"
-                class="flex flex-col justify-center items-center gap-6 w-[95%] mx-auto my-0 border border-orange-400 md:flex-row md:gap-0 lg:border-2 lg:border-b-black lg:gap-0">
+                class="flex flex-col justify-center items-center gap-6 w-[95%] mx-auto my-0 md:flex-row md:gap-0 lg:border-2 lg:border-b-black lg:gap-0">
                 <div id="mymusic-logo" class="w-[90%] md:w-[50%]">
                     <img src="./src/images/logo.png" class="rounded-4xl p-4" alt="">
                 </div>
@@ -45,10 +45,10 @@
                 <!-- Search bar and search icon container end -->
             </nav>
         </header>
-        <main>
+        <main class="flex-grow">
             <!-- Used to display folders -->
             <section id="display-folders"
-                class="w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 p-3 hidden grid-cols-3 place-items-center gap-3 border border-amber-300 md:grid-cols-5 lg:grid-cols-6">
+                class="w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 p-3 grid grid-cols-3 place-items-center gap-3 md:grid-cols-5 lg:grid-cols-6">
                 <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
                     <div></div>
                 </div>
@@ -89,63 +89,64 @@
             <!-- Used to display folders container end-->
             <!-- Used to display the songs from folder -->
             <section id="display-songs"
-                class="relative w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 p-3 grid grid-cols-1 place-items-center gap-3 border border-amber-300 md:grid-cols-3 lg:grid-cols-5">
-                <!-- <div class="absolute top-2.5 left-3">
-                    <img src="src/images/left-arrow.png" alt="prev-btn">
-                </div> -->
-                <div class="border bg-gray-600 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
+                class="relative w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-2 px-3 pt-10 hidden grid-cols-1 place-items-center gap-3 md:grid-cols-3 lg:grid-cols-5">
+                <div class="absolute top-2.5 left-3 flex items-center gap-1 bg-black rounded-xl">
+                    <img src="src/images/left-arrow.png" class="invert" alt="prev-btn">
+                    <span class="text-white bg-black px-3">Go Back</span>
+                </div>
+                <div class="border bg-gray-900 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
                     <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
                         <img src="src/images/music-player.png" alt="music-iocn">
                     </div>
                     <div>
-                        <p class="text-white text-sm p-1 md:text-md border-2">Boku no Hero Academia - Merry-Go-Round</p>
+                        <p class="text-white text-sm p-1 md:text-md">Boku no Hero Academia - Merry-Go-Round</p>
                     </div>
-                    <div>
-                        <span class="material-symbols-outlined">favorite</span>
+                    <div class="w-[30px] invert">
+                        <img src="src/images/unlike-heart-icon.png" alt="unliked-heart-icon">
                     </div>
                 </div>
-                <div class="border bg-gray-600 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
+                <div class="border bg-gray-900 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
                     <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
                         <img src="src/images/music-player.png" alt="music-iocn">
                     </div>
                     <div>
                         <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
                     </div>
-                    <div>
-                        <span class="material-symbols-outlined">favorite</span>
+                    <div class="w-[30px] invert">
+                        <img src="src/images/unlike-heart-icon.png" alt="unliked-heart-icon">
                     </div>
                 </div>
-                <div class="border bg-gray-600 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
+                <div class="border bg-gray-900 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
                     <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
                         <img src="src/images/music-player.png" alt="music-iocn">
                     </div>
                     <div>
                         <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
                     </div>
-                    <div>
-                        <span class="material-symbols-outlined">favorite</span>
+                    <div class="w-[30px] invert">
+                        <img src="src/images/unlike-heart-icon.png" alt="unliked-heart-icon">
                     </div>
                 </div>
-                <div class="border bg-gray-600 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
+                <div class="border bg-gray-900 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
                     <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
                         <img src="src/images/music-player.png" alt="music-iocn">
                     </div>
                     <div>
                         <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
                     </div>
-                    <div>
-                        <span class="material-symbols-outlined">favorite</span>
+                    <div class="w-[30px] invert">
+                        <img src="src/images/unlike-heart-icon.png" alt="unliked-heart-icon">
                     </div>
                 </div>
-                <div class="border bg-gray-600 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
+                <div class="border bg-gray-900 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
                     <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
                         <img src="src/images/music-player.png" alt="music-iocn">
                     </div>
                     <div>
                         <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
                     </div>
-                    <div>
-                        <span class="material-symbols-outlined">favorite</span>
+                    <div class="w-[30px] invert">
+                        <img src="src/images/unlike-heart-icon.png" alt="unliked-heart-icon">
                     </div>
                 </div>
 
@@ -206,55 +207,157 @@
                 </div>
                 <!-- Progress bar and music details holder end-->
             </article>
-    </div>
-
-    <!-- Second page -->
-    <!-- section one -->
-    <section class="flex flex-col md:flex-row md:w-full border-2 border-green-500">
-        <div class="bg-[#101E26] md:w-[30%] md:flex md:justify-center md:items-center">
-            <h4 class="text-[#ECDFCC] text-7xl p-10 md: md:leading-[100px]">Taste of<br>Music</h4>
-        </div>
-        <!-- section two -->
-        <section class="bg-[#103766] p-4 md:w-[70%]">
-            <p class="bg-[#101E26] text-[#ECDFCC] mx-auto my-5 p-3 rounded-2xl text-4xl text-center w-[90%]">All
-                time favorite</p>
-            <div
-                class="grid grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:h-4/5 lg:py-7 lg:px-6 border-2 border-pink-400">
-                <!-- displaying most fav/played songs -->
-                <div class="border  w-full h-[70px] bg-black">
-                    <div></div>
+            <!-- Second page -->
+            <!-- section one -->
+            <section class="flex flex-col md:flex-row md:w-full">
+                <div class="bg-[#101E26] md:w-[40%] md:flex md:justify-center md:items-center">
+                    <h4 class="text-[#ECDFCC] text-7xl p-10 md: md:leading-[100px]">Taste of<br>Music</h4>
                 </div>
-                <div class="border  w-full h-[70px] bg-black">
-                    <div></div>
-                </div>
-                <div class="border  w-full h-[70px] bg-black">
-                    <div></div>
-                </div>
-                <div class="border  w-full h-[70px] bg-black">
-                    <div></div>
-                </div>
-                <div class="border  w-full h-[70px] bg-black">
-                    <div></div>
-                </div>
-                <div class="border  w-full h-[70px] bg-black">
-                    <div></div>
-                </div>
-                <div class="border  w-full h-[70px] bg-black">
-                    <div></div>
-                </div>
-                <div class="border  w-full h-[70px] bg-black">
-                    <div></div>
-                </div>
-                <div class="border  w-full h-[70px] bg-black">
-                    <div></div>
-                </div>
-            </div>
-        </section>
-    </section>
-    </main>
-    <footer class="bg-[#001F3F] p-2">
-        <p class="text-[#ECDFCC] text-center text-xl">MyMusic &copy; 2025</p>
-    </footer>
+                <!-- section two -->
+                <section class="bg-[#103766] p-4 md:w-[60%]">
+                    <p class="bg-[#101E26] text-[#ECDFCC] mx-auto my-5 p-3 rounded-2xl text-4xl text-center w-[90%]">All
+                        time favorite</p>
+                    <!-- displaying most fav/played songs -->
+                    <div
+                        class=" grid grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:py-7 lg:px-6">
+                        <div
+                            class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
+                            <div
+                                class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                                <img src="src/images/music-player.png" alt="music-iocn">
+                            </div>
+                            <div>
+                                <p class="text-white text-sm  md:text-lg p-2">Boku no Hero Academia - Merry-Go-Round</p>
+                            </div>
+                            <div class="w-[30px]">
+                                <img src="src/images/liked-heart-icon.png" alt="liked-heart-icon">
+                            </div>
+                        </div>
+                        <div
+                            class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
+                            <div
+                                class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                                <img src="src/images/music-player.png" alt="music-iocn">
+                            </div>
+                            <div>
+                                <p class="text-white text-sm  md:text-lg p-2">Boku no Hero Academia - Merry-Go-Round</p>
+                            </div>
+                            <div class="w-[30px]">
+                                <img src="src/images/liked-heart-icon.png" alt="liked-heart-icon">
+                            </div>
+                        </div>
+                        <div
+                            class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
+                            <div
+                                class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                                <img src="src/images/music-player.png" alt="music-iocn">
+                            </div>
+                            <div>
+                                <p class="text-white text-sm  md:text-lg p-2">Boku no Hero Academia - Merry-Go-Round</p>
+                            </div>
+                            <div class="w-[30px]">
+                                <img src="src/images/liked-heart-icon.png" alt="liked-heart-icon">
+                            </div>
+                        </div>
+                        <div
+                            class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
+                            <div
+                                class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                                <img src="src/images/music-player.png" alt="music-iocn">
+                            </div>
+                            <div>
+                                <p class="text-white text-sm  md:text-lg p-2">Boku no Hero Academia - Merry-Go-Round</p>
+                            </div>
+                            <div class="w-[30px]">
+                                <img src="src/images/liked-heart-icon.png" alt="liked-heart-icon">
+                            </div>
+                        </div>
+                        <div
+                            class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
+                            <div
+                                class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                                <img src="src/images/music-player.png" alt="music-iocn">
+                            </div>
+                            <div>
+                                <p class="text-white text-sm  md:text-lg p-2">Boku no Hero Academia - Merry-Go-Round</p>
+                            </div>
+                            <div class="w-[30px]">
+                                <img src="src/images/liked-heart-icon.png" alt="liked-heart-icon">
+                            </div>
+                        </div>
+                        <div
+                            class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
+                            <div
+                                class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                                <img src="src/images/music-player.png" alt="music-iocn">
+                            </div>
+                            <div>
+                                <p class="text-white text-sm  md:text-lg p-2">Boku no Hero Academia - Merry-Go-Round</p>
+                            </div>
+                            <div class="w-[30px]">
+                                <img src="src/images/liked-heart-icon.png" alt="liked-heart-icon">
+                            </div>
+                        </div>
+                        <div
+                            class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
+                            <div
+                                class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                                <img src="src/images/music-player.png" alt="music-iocn">
+                            </div>
+                            <div>
+                                <p class="text-white text-sm  md:text-lg p-2">Boku no Hero Academia - Merry-Go-Round</p>
+                            </div>
+                            <div class="w-[30px]">
+                                <img src="src/images/liked-heart-icon.png" alt="liked-heart-icon">
+                            </div>
+                        </div>
+                        <div
+                            class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
+                            <div
+                                class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                                <img src="src/images/music-player.png" alt="music-iocn">
+                            </div>
+                            <div>
+                                <p class="text-white text-sm  md:text-lg p-2">Boku no Hero Academia - Merry-Go-Round</p>
+                            </div>
+                            <div class="w-[30px]">
+                                <img src="src/images/liked-heart-icon.png" alt="liked-heart-icon">
+                            </div>
+                        </div>
+                        <div
+                            class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
+                            <div
+                                class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                                <img src="src/images/music-player.png" alt="music-iocn">
+                            </div>
+                            <div>
+                                <p class="text-white text-sm  md:text-lg p-2">Boku no Hero Academia - Merry-Go-Round</p>
+                            </div>
+                            <div class="w-[30px]">
+                                <img src="src/images/liked-heart-icon.png" alt="liked-heart-icon">
+                            </div>
+                        </div>
+                        <div
+                            class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
+                            <div
+                                class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
+                                <img src="src/images/music-player.png" alt="music-iocn">
+                            </div>
+                            <div>
+                                <p class="text-white text-sm  md:text-lg p-2">Boku no Hero Academia - Merry-Go-Round</p>
+                            </div>
+                            <div class="w-[30px]">
+                                <img src="src/images/liked-heart-icon.png" alt="liked-heart-icon">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- displaying most fav/played songs container end-->
+                </section>
+            </section>
+        </main>
+        <footer class="bg-[#001F3F] p-2">
+            <p class="text-[#ECDFCC] text-center text-xl">MyMusic &copy; 2025</p>
+        </footer>
 </body>
 
 </html>
