some changes in js

--- a/index.html
+++ b/index.html
@@ -49,46 +49,10 @@
         <!-- Used to display folders -->
         <section id="display-folders"
             class="w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 p-3 grid grid-cols-3 place-items-center gap-3 md:grid-cols-5 lg:grid-cols-6">
-            <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
-                <div></div>
-            </div>
-            <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
-                <div></div>
-            </div>
-            <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
-                <div></div>
-            </div>
-            <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
-                <div></div>
-            </div>
-            <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
-                <div></div>
-            </div>
-            <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
-                <div></div>
-            </div>
-            <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
-                <div></div>
-            </div>
-            <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
-                <div></div>
-            </div>
-            <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
-                <div></div>
-            </div>
-            <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
-                <div></div>
-            </div>
-            <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
-                <div></div>
-            </div>
-            <div class="aspect-square w-[100px] md:w-[120px] lg:w-[150px] bg-black">
-                <div></div>
-            </div>
         </section>
         <!-- Used to display folders container end-->
         <!-- Used to display the songs from folder -->
-        <section id="display-songs"
+        <section id="display-songs-container"
             class="relative w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-2 px-3 pt-10 hidden grid-cols-1 place-items-center gap-3 md:grid-cols-3 lg:grid-cols-5">
             <div class="absolute top-2.5 left-3 flex items-center gap-1 bg-black rounded-xl">
                 <img src="src/images/left-arrow.png" class="invert" alt="prev-btn">
@@ -220,7 +184,7 @@
                     time favorite</p>
                 <!-- displaying most fav/played songs -->
                 <div
-                    class=" grid grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:py-7 lg:px-6">
+                    class=" grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:py-7 lg:px-6">
                     <div
                         class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
                         <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
