added fetch songs logic for folders

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src="src/images/left-arrow.png" class="invert" alt="prev-btn">
                 <span class="text-white bg-black px-3">Go Back</span>
             </div>
-            <div class="border bg-gray-900 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
+            <!-- <div class="border bg-gray-900 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
                 <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
                     <img src="src/images/music-player.png" alt="music-iocn">
                 </div>
@@ -112,7 +112,7 @@
                 <div class="w-[30px] invert">
                     <img src="src/images/unlike-heart-icon.png" alt="unliked-heart-icon">
                 </div>
-            </div>
+            </div> -->
         </section>
         <!-- Used to display the songs from folder container end-->
         <!-- Song, play, pause section -->
@@ -184,7 +184,7 @@
                     time favorite</p>
                 <!-- displaying most fav/played songs -->
                 <div
-                    class=" grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:py-7 lg:px-6">
+                    class="grid grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:py-7 lg:px-6">
                     <div
                         class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
                         <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
