added basic audio function to the codebase

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section id="display-songs-container"
             class="relative w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-2 px-3 pt-10 hidden grid-cols-1 place-items-center gap-3 md:grid-cols-3 lg:grid-cols-5">
             <div class="absolute top-2.5 left-3 flex items-center gap-1 bg-black rounded-xl">
-                <img src="src/images/left-arrow.png" class="invert" alt="prev-btn">
+                <img id="prev-btn" src="src/images/left-arrow.png" class="invert hover:cursor-pointer" alt="prev-btn">
                 <span class="text-white bg-black px-3">Go Back</span>
             </div>
             <!-- <div class="border bg-gray-900 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
