--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
         </section>
         <!-- Used to display folders container end-->
         <!-- Used to display the songs from folder -->
+        <div class="relative top-2.5 left-3 flex items-center gap-1 bg-black rounded-xl">
+            <img id="prev-btn" src="src/images/left-arrow.png" class="invert hover:cursor-pointer" alt="prev-btn">
+            <span class="text-white bg-black px-3">Go Back</span>
+        </div>
         <section id="display-songs-container"
             class="relative w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-2 px-3 pt-10 hidden grid-cols-1 place-items-center gap-3 md:grid-cols-3 lg:grid-cols-5">
-            <div class="absolute top-2.5 left-3 flex items-center gap-1 bg-black rounded-xl">
-                <img id="prev-btn" src="src/images/left-arrow.png" class="invert hover:cursor-pointer" alt="prev-btn">
-                <span class="text-white bg-black px-3">Go Back</span>
-            </div>
+
             <!-- <div class="border bg-gray-900 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
                 <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
                     <img src="src/images/music-player.png" alt="music-iocn">
@@ -157,7 +158,7 @@
                 <div class="flex justify-between items-center mt-2">
                     <!-- Music name -->
                     <div>
-                        <span class="text-[12px] md:text-lg lg:text-xl text-white">Die for you ft.Grabbitz</span>
+                        <span id= "curr-song-name" class="text-[12px] md:text-lg lg:text-xl text-white">Die for you ft.Grabbitz</span>
                     </div>
                     <!-- Music name end -->
 
@@ -183,7 +184,7 @@
                 <p class="bg-[#101E26] text-[#ECDFCC] mx-auto my-5 p-3 rounded-2xl text-4xl text-center w-[90%]">All
                     time favorite</p>
                 <!-- displaying most fav/played songs -->
-                <div
+                <!-- <div
                     class="grid grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:py-7 lg:px-6">
                     <div
                         class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
@@ -305,7 +306,7 @@
                             <img src="src/images/liked-heart-icon.png" alt="liked-heart-icon">
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- displaying most fav/played songs container end-->
             </section>
         </section>
