added some player features

--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
                     </div>
                     <!-- prev btn end -->
                     <!-- play/pause btn -->
-                    <div class="aspect-square w-[20px] md:w-[40px] lg:w-[50px]">
+                    <div id="play-pause-btn"class="aspect-square w-[20px] md:w-[40px] lg:w-[50px]">
                         <img src="src/images/play-btn.png" alt="play-btn-icon">
                     </div>
                     <!-- play,pasue btn end -->
                     <!-- next btn -->
-                    <div class="aspect-square w-[20px] md:w-[40px] lg:w-[50px]">
+                    <div id="next-btn" class="aspect-square w-[20px] md:w-[40px] lg:w-[50px]">
                         <img src="src/images/next-btn.png" alt="next-btn-icon">
                     </div>
                     <!-- next btn end -->
@@ -164,7 +164,7 @@
 
                     <!-- song duration timer div -->
                     <div>
-                        <span class="text-white text-sm md:text-lg lg:text-xl">1:24/5:50</span>
+                        <span id="song-duration" class="text-white text-sm md:text-lg lg:text-xl">1:24/5:50</span>
                     </div>
                     <!-- song duration timer div end -->
                 </div>
