changes in  player logic

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- Used to display folders container end-->
         <!-- Used to display the songs from folder -->
         <div class="relative top-2.5 left-3 flex items-center gap-1 bg-black rounded-xl">
-            <img id="prev-btn" src="src/images/left-arrow.png" class="invert hover:cursor-pointer" alt="prev-btn">
+            <img id="go-back-btn" src="src/images/left-arrow.png" class="invert hover:cursor-pointer" alt="prev-btn">
             <span class="text-white bg-black px-3">Go Back</span>
         </div>
         <section id="display-songs-container"
@@ -127,7 +127,7 @@
                 <!-- play, pause, next button div holder -->
                 <div class="flex items-center gap-2 justify-center p-2">
                     <!-- Prev btn -->
-                    <div class="aspect-square w-[20px] md:w-[40px] lg:w-[50px]">
+                    <div id="prev-btn" class="aspect-square w-[20px] md:w-[40px] lg:w-[50px]">
                         <img src="src/images/prev-btn.png" alt="prev-btn-icon">
                     </div>
                     <!-- prev btn end -->
