changes in music player logic

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <!-- prev btn end -->
                     <!-- play/pause btn -->
                     <div id="play-pause-btn"class="aspect-square w-[20px] md:w-[40px] lg:w-[50px]">
-                        <img src="src/images/play-btn.png" alt="play-btn-icon">
+                        <img id="play-pause-icon" src="src/images/pause-btn.png" alt="play-btn-icon">
                     </div>
                     <!-- play,pasue btn end -->
                     <!-- next btn -->
