added new song and features in music player

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                 <!-- play, pause, next button div holder end -->
                 <!-- Progress bar div -->
                 <!-- Progress bar outer div -->
-                <div class="bg-black w-full rounded-2xl p-1">
+                <div class="bg-black w-full rounded-2xl p-1 cursor-pointer" id="progress-outer-bar">
                     <!-- Progress bar inner div -->
-                    <div class="bg-white w-[40%] p-1 rounded-2xl">
+                    <div class="bg-white w-[40%] p-1 rounded-2xl cursor-pointer" id="progress-inner-bar">
 
                     </div>
                     <!-- Progress bar inner div end -->
@@ -186,7 +186,7 @@
                 <!-- displaying most fav/played songs -->
                 <div
                     id="fav-Song-Container" class="grid grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:py-7 lg:px-6">
-                    <div
+                    <!-- <div
                         class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
                         <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
                             <img src="src/images/music-player.png" alt="music-iocn">
@@ -197,7 +197,7 @@
                         <div class="w-[30px]">
                             <img src="src/images/liked-heart-icon.png" alt="liked-heart-icon">
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- displaying most fav/played songs container end-->
             </section>
