Added search feature

--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
             <!-- Logo & Heading container end-->
             <nav>
                 <!-- Search bar and search icon container -->
-                <section class="my-3 mx-auto w-[90%]">
-                    <div class="bg-[#001F3F] rounded-2xl md:p-2.5">
-                        <!-- Search icon -->
+                <section class="my-3 mx-auto w-[90%] ">
+                    <!-- Search icon -->
+                    <div class="bg-[#001F3F] rounded-2xl md:p-2.5 flex items-center gap-5 px-2">
                         <input type="text" id="text" class="w-full p-3 rounded-2xl text-amber-50 md:text-lg"
                             placeholder="Search for folder" />
+
                     </div>
                 </section>
                 <!-- Search bar and search icon container end -->
@@ -184,8 +185,8 @@
                 <p class="bg-[#101E26] text-[#ECDFCC] mx-auto my-5 p-3 rounded-2xl text-4xl text-center w-[90%]">All
                     time favorite</p>
                 <!-- displaying most fav/played songs -->
-                <div
-                    id="fav-Song-Container" class="grid grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:py-7 lg:px-6">
+                <div id="fav-Song-Container"
+                    class="grid grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:py-7 lg:px-6">
                     <!-- <div
                         class=" bg-gray-900 px-3 py-2 mx-auto my-0 lg:w-[80%] h-[70px] flex justify-between items-center gap-3 rounded-xl">
                         <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
